--- a/css/email_page.css
+++ b/css/email_page.css
@@ -11,7 +11,7 @@
     display: -ms-flexbox;
     display: flex;
     width: 100%;
-    height: 700px;
+    height: 500px;
     padding-top: 60px;
     padding-left: 20px;
     padding-right: 20px;
@@ -74,7 +74,6 @@
     align-items: flex-start;
    
 }
-
 .heading{
 /*    text-transform: uppercase;*/
 }
@@ -90,7 +89,6 @@
     padding: 0px 8px;
     font-size: 0.8rem;
 }
-
 .fcontainer .textbox:focus{
     -webkit-box-shadow:0px 0px 8px 0px rgba(rgba( 0, 0, 0, 0.5 ));
     box-shadow:0px 0px 8px 0px rgba( 0, 0, 0, 0.5 );
@@ -113,28 +111,21 @@
 /*    flex-direction: column;*/
     margin: 5px 0px;
 }
-
 .w100{
     width: 100%;
 }
 
 .button{
-   
-    display: -webkit-box;
-   
-    display: -ms-flexbox;
-   
-    display: flex;
-    -ms-flex-line-pack: center;
+   display: flex;
     align-content: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
+    
     width: 120px;
     font-size: 0.9em;
     height: 40px;
-    border-radius: 6px;
+    border-radius: 40px;
     margin-top: 20px;
+    margin-bottom: 10px;
     background-color: var(--pcolor);
     color: #fff;
     border: 0px;
@@ -152,17 +143,8 @@
 /*Tablet*/
 
 @media all and (min-width: 600px) {
-
-
 }
 
 /*Desktop*/
 @media all and (min-width: 900px) {
-    
-
-
-
-    
 }
-
-
