--- a/css/index.css
+++ b/css/index.css
@@ -43,47 +43,23 @@
 }
 
 .cover_image{
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     width: 100%;
     height: 100%;
+    
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
     color: #fff;
-    background-image : url("../images/cover_low.jpg");
-    background-position: center;
-    background-color: rgba(0,0,0,0.8); 
+    background-image:linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),
+    url("../images/cover_low.jpg")
+    ;
+    background-position: center; 
     background-size: cover;
     background-repeat: no-repeat;
 }
-.gradient{
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 100%;
-    height: 100%;
-/*    opacity: 0.8;*/
-    
-    -webkit-box-pack: center;
-    
-    -ms-flex-pack: center;
-    
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    
-    -webkit-box-orient: vertical;
-    
-    -webkit-box-direction: normal;
-    
-    -ms-flex-direction: column;
-    
-    flex-direction: column;
-    
-/*    background-image:linear-gradient(135deg,hsla(340,80%,40%,0.7)50%,hsla(340,80%,40%,0.2));*/
-    background-color:rgba(0,0,0,0.6);
 
-}
 .c_container{
     display: -webkit-box;
     display: -ms-flexbox;
