--- a/css/login.css
+++ b/css/login.css
@@ -27,6 +27,7 @@
     -ms-flex-align: center;
     align-items: center;
 } 
+
 .fheader{
     display: -webkit-box;
     display: -ms-flexbox;
@@ -62,27 +63,32 @@
 }
 
 .fcontainer{
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     width: 90%;
     max-width: 400px;
     border: 0px solid var(--pcolor);
     border-radius: 5px;
-    padding: 20px;
-    
-    background: -webkit-gradient(linear,left top, left bottom,from(var(--pcolor)),to(var(--pcolordark)));
-    
+    padding: 15px;    
     background: linear-gradient(var(--pcolor),var(--pcolordark));
-/* */
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
     flex-direction: column;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
+    justify-content: flex-end;
     align-items: center;
-/*    justify-content: space-between;*/
+}
+.fcontainer .caption{
+    color: #fff;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    line-height: 1.7em;
+    font-size: 0.9em;
+}
+.fcontainer .textbox{
+    border: 0px solid var(--pcolor);
+    border-radius: 3px;
+    height: 2rem;
+    padding: 0px 8px;
+    font-size: 0.8rem;
+    
 }
 
 .row{
@@ -101,45 +107,28 @@
     margin-bottom: 15px;
 /*    flex-direction: column;*/
 }
-.fcontainer .caption{
-    color: #fff;
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin-bottom: 3px;
-    -ms-flex-line-pack: center;
-    align-content: center;
-/*    justify-content: center;*/
-}
-.fcontainer .textbox{
-    border: 0px solid var(--pcolor);
-    border-radius: 3px;
-    height: 2rem;
-    padding: 0px 8px;
-    font-size: 0.8rem;
-}
-
-.fcontainer .w50{
+.w50{
     width: 49%;   
 }
-.fcontainer .w100{
+.w100{
     width: 100%;
+}
+
+.row:nth-child(2){
+    margin-bottom:0px;
 }
 
 .button{
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -ms-flex-line-pack: center;
     align-content: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
+    
     width: 120px;
+    font-size: 0.9em;
     height: 40px;
-    border-radius: 6px;
+    border-radius: 40px;
     margin-top: 20px;
+    margin-bottom: 10px;
     background-color: var(--pcolor);
     color: #fff;
     border: 0px;
@@ -149,7 +138,6 @@
     background-color: transparent;
     color: var(--pcolor);
 }
-
 .button:focus{
     outline: 0px;
 }
@@ -158,7 +146,6 @@
     font-size: 0.9rem;
 }
 .body_section a{
-/*    font-style: italic;*/
     color: var(--pcolor) !important;
     cursor: pointer;
     font-weight: bold;
