--- a/css/signup.css
+++ b/css/signup.css
@@ -57,7 +57,7 @@
     text-transform: uppercase;
     margin: 0px;
     color: #fff;
-    letter-spacing: 1px;
+/*    letter-spacing: 1px;*/
     padding: 0px;
 }
 
