--- a/css/signup.css
+++ b/css/signup.css
@@ -27,12 +27,25 @@
     box-shadow: 0px 0px 25px 0px hsla(0,100%,50%,0.2);
     background:
         linear-gradient(10deg,transparent 380px,var(--pcolor) 380px),
-        linear-gradient(80deg,#fff 80%,var(--pcolordark) 80%);
+        linear-gradient(80deg,transparent 80%,var(--pcolordark) 80%);
     border-radius: 40px;
     justify-content: center;
     align-items: center;
+/*    animation: gradient 3s ease-in-out infinite;*/
 }
 
+/*
+@keyframes gradient{
+    0%{  
+    }
+    50%{
+        transform: scale(1.1);
+    }
+    100%{
+    
+    }
+}
+*/
 .fheader{
     display: flex;
     flex-direction: column;
