--- a/css/signup.css
+++ b/css/signup.css
@@ -19,33 +19,76 @@
 }
 
 .fcontainer{
+    position: relative;
     display: flex;
-    padding: 15px;
-    width: 95%;
+    width: 90%;
     max-width: 600px;
-    flex-direction: column;
-    box-shadow: 0px 0px 25px 0px hsla(0,100%,50%,0.2);
-    background:
-        linear-gradient(10deg,transparent 380px,var(--pcolor) 380px),
-        linear-gradient(80deg,transparent 80%,var(--pcolordark) 80%);
+    box-shadow: 0px 0px 20px 0px hsla(0,100%,50%,0.4);
+    overflow: hidden;
     border-radius: 40px;
-    justify-content: center;
-    align-items: center;
 /*    animation: gradient 3s ease-in-out infinite;*/
 }
-
-/*
-@keyframes gradient{
-    0%{  
+.fcontainer .gradient1{
+/*    box-shadow: 0px 0px 19px 0px green;*/
+    position: absolute;
+    background-color: var(--pcolor);
+    height: 140px;
+    top:0px;
+    left:-10px;
+    width: 130%;
+    transform: rotate(10deg);
+    animation: moveg1 3s infinite ease-in-out;
+}
+@keyframes moveg1{
+    0%{
     }
     50%{
-        transform: scale(1.1);
+       top:16px;
+    }
+    100%{
+    }
+    
+}
+.fcontainer .gradient2{
+/*    box-shadow: 0px 0px 20px 0px green;*/
+    position: absolute;
+    background-color: var(--pcolordark);
+    width: 130px;
+    right: -20px;
+    height: 130%;
+    transform: rotate(9deg);
+    animation: moveg2 4s infinite ease-in-out;
+}
+@keyframes moveg2{
+    0%{
+        
+    }
+    50%{
+        right: 0px;
     }
     100%{
     
     }
+    
 }
+
+.content{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    padding: 15px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+/*
+    background:
+    linear-gradient(10deg,transparent 380px,var(--pcolor) 380px),
+    linear-gradient(80deg,transparent 80%,var(--pcolordark) 80%);
 */
+}
+
+
 .fheader{
     display: flex;
     flex-direction: column;
@@ -55,6 +98,7 @@
     padding-bottom: 10px;
     align-items: center;
     margin-bottom: 10px;
+    z-index: 7;
 }
 .heading{
     
@@ -73,7 +117,6 @@
 /*    letter-spacing: 1px;*/
     padding: 0px;
 }
-
 .heading p{
     margin-top: 6px;
     color: rgba(255,255,255,0.90);
@@ -98,6 +141,7 @@
 }
 
 .inner_container{
+    z-index: 5;
     display: flex;
     width: 100%;
     flex-direction: column;
