--- a/css/signup.css
+++ b/css/signup.css
@@ -26,6 +26,7 @@
     box-shadow: 0px 0px 35px 0px hsla(0,100%,50%,0.2);
     overflow: hidden;
     border-radius: 40px;
+    
 /*    animation: gradient 3s ease-in-out infinite;*/
 }
 .fcontainer .gradient1{
@@ -80,7 +81,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #fff;
+/*    background-color: rgb(255, 197, 197);*/
 /*
     background:
     linear-gradient(10deg,transparent 380px,var(--pcolor) 380px),
@@ -121,6 +122,7 @@
     margin-top: 6px;
     color: rgba(255,255,255,0.90);
     font-family: 'lato', sans-serif;
+    font-size: 0.9em;
     
 /*
     Bebas Neue
@@ -162,7 +164,7 @@
     padding: 0px 8px;
     font-size: 0.8em;
     background-color: rgba(255,255,255,1);
-    box-shadow:inset 2px 2px 4px 0px rgba(0,0,0,0.3);
+    box-shadow:inset 0px 0px 4px 0px rgba(0,0,0,0.3);
 }
 .inner_container .textbox:focus{
     box-shadow:0px 0px 5px 0px var(--pcolor);
@@ -188,9 +190,8 @@
    display: flex;
     align-content: center;
     justify-content: center;
-    
     width: 120px;
-    font-size: 0.9em;
+    font-size: var(--button_font_size);
     height: 40px;
     border-radius: 40px;
     margin-top: 20px;
