--- a/css/global.css
+++ b/css/global.css
@@ -178,7 +178,7 @@ color:rgba(255,255,255,1) !important;
     border-bottom: 1px solid var(--pcolordark);
 }
 .nav-item:nth-last-child(1){
-    border-bottom: 0px solid var(--pcolordark);
+    border-bottom: 0px solid ;
 }
 
 /*footer*/
@@ -264,6 +264,7 @@ color:rgba(255,255,255,1) !important;
     width: 100%;
     letter-spacing: 1px;
 }
+
 .fcaption a{
     color: #fff;
 }
@@ -271,3 +272,30 @@ color:rgba(255,255,255,1) !important;
     color: var(--pcolor);
     text-decoration: none;
 }
+
+
+/*Icon*/
+
+.s_icon_container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 16px;
+    width: 16px;
+    margin: 0px 5px;
+/*    border-radius: 50%;*/
+}
+
+.s_icon{
+    width: 100%;
+    height: 100%;
+}
+
+
+@media all and (min-width: 992px) {
+.nav-item{
+    border-bottom: 0px solid;
+    }
+}
+
+
