--- a/css/password_reset.css
+++ b/css/password_reset.css
@@ -160,21 +160,15 @@
 
 .button{
    
-    display: -webkit-box;
-   
-    display: -ms-flexbox;
-   
     display: flex;
-    -ms-flex-line-pack: center;
     align-content: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
     width: 120px;
-    font-size: 0.9em;
+    font-size: var(--button_font_size);
     height: 40px;
-    border-radius: 6px;
+    border-radius: 40px;
     margin-top: 20px;
+    margin-bottom: 10px;
     background-color: var(--pcolor);
     color: #fff;
     border: 0px;
