--- a/css/email_page.css
+++ b/css/email_page.css
@@ -13,41 +13,22 @@
     width: 100%;
     height: 500px;
     padding-top: 60px;
-    padding-left: 20px;
-    padding-right: 20px;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
     flex-direction: column;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
 }
  
 .fcontainer{
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
     padding: 20px;
     width: 90%;
     max-width: 700px;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
     flex-direction: column;
     background-color: #fff;
     border-radius: 5px;
-     -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.6); 
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.6);
+/*    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.6);*/
 }
 .fheader{
     display: -webkit-box;
@@ -84,33 +65,45 @@
 
 .fcontainer .textbox{
     border: 1px solid var(--pcolor);
-    border-radius: 3px;
-    height: 2rem;
+    display: flex;
+    flex: 1;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    height: 100%;
     padding: 0px 8px;
     font-size: 0.8rem;
 }
+
 .fcontainer .textbox:focus{
-    -webkit-box-shadow:0px 0px 8px 0px rgba(rgba( 0, 0, 0, 0.5 ));
-    box-shadow:0px 0px 8px 0px rgba( 0, 0, 0, 0.5 );
     outline: 0px;
 }
 
+
+
+
 .row{
-   display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     width: 100%;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-/*    flex-direction: column;*/
-    margin: 5px 0px;
+    height: 2.5em;
 }
+
+
+.icon_container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 2.5em;
+    padding: 5px;
+    background-color: var(--pcolor);
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+
+.icon{
+    width: 100%;
+    height: 100%;
+}
+
 .w100{
     width: 100%;
 }
