--- a/css/login.css
+++ b/css/login.css
@@ -64,49 +64,66 @@
 }
 
 .fcontainer{
-    display: flex;
-    width: 90%;
-    max-width: 400px;
+    display: grid;
+    height: 150px;
+    
+    min-width: 300px;
+    max-width: 500px;
     border: 0px solid var(--pcolor);
     border-radius: 5px;
-    padding: 15px;    
-    background: linear-gradient(var(--pcolor),var(--pcolordark));
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-}
-.fcontainer .caption{
-    color: #fff;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    line-height: 1.7em;
-    font-size: 0.9em;
-}
-.fcontainer .textbox{
-    border: 0px solid var(--pcolor);
-    border-radius: 3px;
-    height: 2rem;
-    padding: 0px 8px;
-    font-size: 0.8rem;
+    background: var(--pcolor);
+    grid-template-columns: 300px;
+    grid-template-rows: 2em 2em;
     
+    justify-items:center;
+    align-items:center;
+    justify-content: space-evenly;
+    align-content: space-evenly;
+}
+
+.icon_container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 2.5em;
+    background-color: var(--pcolordark);
+    height: 2.5em;
+    padding: 5px;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 5px;
+}
+
+
+.icon{
+    width: 100%;
+    height: 100%;
+}
+
+.fcontainer .textbox{
+    display: flex;
+    flex: 1;
+    border: 1px solid hsla(0,100%,10%,0.3);
+    height: 100%;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    padding: 0px 8px;
+    font-size: 0.8em;
+    background-color: rgba(255,255,255,1);
+}
+
+.fcontainer .textbox:focus{
+    outline: 0px;
+}
+
+.textbox:hover .s_icon_container{
+    box-shadow: 0px 0px 3px 0px #fff;
 }
 
 .row{
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    width: 100%;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
+    width: 90%;
+    height: 2.5em;
     align-items: center;
-    margin-bottom: 15px;
-/*    flex-direction: column;*/
 }
 .w50{
     width: 49%;   
@@ -114,7 +131,6 @@
 .w100{
     width: 100%;
 }
-
 
 .button{
     display: flex;
