--- a/css/signup.css
+++ b/css/signup.css
@@ -11,8 +11,6 @@
     width: 100%;
     height: 700px;
     padding-top: 60px;
-    padding-left: 20px;
-    padding-right: 20px;
     justify-content: center;
     align-items: center;
     background-color: #fff;
@@ -21,7 +19,7 @@
 .fcontainer{
     position: relative;
     display: flex;
-    width: 95%;
+    width: 90%;
     max-width: 600px;
     box-shadow: 0px 0px 35px 0px hsla(0,100%,50%,0.2);
     overflow: hidden;
@@ -155,7 +153,7 @@
     line-height: 1.7em;
     font-size: 0.9em;
     display: flex;
-    align-content: center;
+    align-items: center;
 }
 .inner_container .textbox{
     border: 1px solid hsla(0,100%,10%,0.3);
@@ -185,7 +183,7 @@
 .inner_container .w100{
     width: 100%;
 }
-
+ 
 .button{
    display: flex;
     align-content: center;
