--- a/css/index.css
+++ b/css/index.css
@@ -30,7 +30,7 @@
   
                 /*Cover section*/
 
-
+ 
  
 .cover_section{
     padding-top: 60px;
@@ -216,130 +216,87 @@
 
          /*Search tab*/
 
-.tab_section{
+.searchbox_section{
     position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     width: 100%;
-    height: 60px;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
+    height: 70px;
     justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
     background-color: var(--pcolor);
 }
 
-.tab_container{
-    display: -webkit-box;
-    display: -ms-flexbox;
+.searchbar{
     display: flex;
     width: 90%;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
-    height: 30px;
-    color: #fff;
+    height: 35px;
+    max-width: 400px;
 }
 
-.search_text{
-    display: -webkit-box;
-    display: -ms-flexbox;
+.searchbar .search_text{
     display: flex;
-    background-color: var(--pcolordark);
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
+    background-color: var(--pcolor);
     justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
-    width: 80px;
+    font-size: 0.9em;
+    padding-left:18px;
+    padding-right:12px;
     height: 100%;
-    border-top-right-radius: 6px;
-    border-bottom-right-radius: 6px;
+    color:#fff;
+    border-top-left-radius: 35px;
+    border-bottom-left-radius: 35px;
+    border: 1px solid #fff;
 }
 
-.search_text:hover{
-    background-color: var(--pcolordarker);
-}
-
-.searchbox_container{
-/*   background-color: aqua;*/
-    max-width: 300px;
-    -webkit-box-flex: 1;
-    -ms-flex: 1;
+.searchbar .searchbox_container{
+    display: flex;
     flex: 1;
-/*    margin-left: 10px;*/
-   
     height: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    border: 1px solid #fff;
+/*
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+*/
+    overflow: hidden;
 }
-
-.searchbox_container .input{
+.searchbox_container .searchbox{
     width:100%;
     height: 100%;
     border: 0px solid #1EA075;
-    padding: 0px 9px;
-    
+    padding-left:9px;
+    font-size: 0.9em;
 }
-
-.searchbox_container .input:focus{
+.searchbox_container .searchbox:focus{
     outline: 0px;
 }
 
-/* .tab .categorybox{  
-
-} */
-/*
-.tab .searchbox{
-    border-left: 0px;
-}
-*/
-/*
-.searchbar .search_logo {
-    padding: 5px;
-    height: auto;
-}
-*/
-
-.search_icon_container{
-    display: -webkit-box;
-    display: -ms-flexbox;
+.searchbar .search_icon_container{
     display: flex;
     height: 100%;
-    border-top-left-radius: 6px;
-    border-bottom-left-radius: 6px;
-    width: 40px;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
+    border-top-right-radius: 35px;
+    border-bottom-right-radius: 35px;
+    width: 65px;
+    padding-left: 15px;
+    padding-right: 15px;
     justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
-    border-right: 1px solid var(--pcolor);
-    color: #fff;
-    background-color: rgba(255,255,255,1);
+    background-color: #fff;
+    border: 1px solid #fff;
 }
-
+.search_icon_container:hover{
+    background-color:rgba(255,255,255,0.7);
+}
 .search_icon{
     background-image: url("../icons/search.svg");
     fill:#fff;
-    height: 18px;
-    width: 18px;
+    height: 20px;
+    width: 20px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
 }
-
-
-
 
                   /*Categories*/
 .categories_section{
