--- a/css/index.css
+++ b/css/index.css
@@ -30,7 +30,7 @@
   
                 /*Cover section*/
 
- 
+  
  
 .cover_section{
     padding-top: 60px;
@@ -42,11 +42,11 @@
     height: 400px;
 /*    background-color: blue;*/
 }
+
 .cover_image{
     display: flex;
     width: 100%;
     height: 100%;
-    
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -60,30 +60,16 @@
     background-repeat: no-repeat;
 }
 .c_container{
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
     flex-direction: column;
     width: 330px;
-    height: 80%;
-    
-    -webkit-box-pack: justify;
-    
-    -ms-flex-pack: justify;
-    
+    height: 80%;    
     justify-content: space-between;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
 /*    background-color: crimson;*/
 }
 
 .c_row {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     width: 100%;
     justify-content: space-between;
@@ -91,36 +77,25 @@
 
 .c_header{
     width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    height: 190px;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
     flex-direction: column;
-    -webkit-box-pack: start;
-    -ms-flex-pack: start;
     justify-content: flex-start;
 /*    background-color: blue;*/
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
+    height: 160px;
 }
-.c_subheader{
+.buttons_container{
     width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -ms-flex-pack: distribute;
     justify-content: space-around;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
 /*    background-color: chartreuse;*/
    
 }
-.c_subheader a:hover{
+.buttons_container a{
+    text-decoration:none;
+}
+.buttons_container a:hover{
    text-decoration: none;
 }
 
@@ -138,22 +113,15 @@
 }
 
 .c_button{
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     font-family: 'Open Sans', sans-serif;
     width: 150px;
     height: 40px;
     font-size: var(--button_font_size);
-    -ms-flex-item-align: end;
     align-self: flex-end;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
-    margin: 8px 0px;
+    margin: 0px 0px;
     border-radius: 5px;
 }
 .c_button:focus{
@@ -161,6 +129,8 @@
 }
 
 .c_button p{
+    margin: 0px;
+    padding: 0px;
     font-weight: bold;
     text-decoration: none;
 }
