--- a/css/index.css
+++ b/css/index.css
@@ -38,7 +38,7 @@
     padding-top: 60px;
     display: flex;
     width: 100%;
-    background-color: blue;
+    background-color: crimson;
 }
 .cover_image{
     display: flex;
