--- a/css/index.css
+++ b/css/index.css
@@ -7,11 +7,13 @@
     --success_color:rgb(0,255,0,1);
     --button_font_size:0.9em;
 }
+
+
             /*Cover section*/
 .cover_section{
     position: relative;
-    height: 530px;
-    padding-top: 60px;
+    height: 500px;
+/*    padding-top: 60px;*/
     display: flex;
     width: 100%;
     background-color: crimson;
@@ -36,7 +38,7 @@
     flex-direction: column;
     width: 90%;
     min-width: 393px;
-    height: 250px;
+    height: 240px;
     justify-content: space-between;
     align-items: center;
 /*    background-color: crimson;*/
@@ -51,25 +53,16 @@
     justify-content: center;
 }
 .c_upper h1{
-    display: flex;
-    align-items: center;
-    text-align: center;
     font-size: 3rem;
     color: #FFFFFF;
     font-family: 'lobster',cursive;
-    line-height: 64px;
     text-shadow: 2px 2px 5px rgba(0,0,0,0.6);
-/*    font-family: 'Carter One', cursive;*/
-/*    width: 271px;*/
-/*    height: 64.29px;*/
+    padding: 0px;
+    margin: 6px;
+/*    background-color: blueviolet;*/
 }
 .c_upper p{
-    font-size: 1rem;
-    line-height: 24px;
-    display: flex;
-    align-items: center;
     text-align: center;
-    color: #FFFFFF;
 }
 
 .c_lower{
@@ -83,12 +76,11 @@
     display: flex;
     justify-content: space-between;
 /*    background-color: chartreuse;*/
-/*    margin-bottom: 10px;*/
 }
-
-.buttons_container a:hover{
+.buttons_container a{
     text-decoration: none;
 }
+
 
 .c_button{
     display: flex;
@@ -101,16 +93,11 @@
     margin: 0px 0px;
     border-radius: 5px;
     box-sizing: border-box;
+    cursor: pointer;
+    font-weight: 600;
 }
 .c_button:focus{
     outline: 0px;
-}
-
-.c_button p{
-    margin: 0px;
-    padding: 0px;
-    font-weight: 600;
-    text-decoration: none;
 }
 
 .signin_button{
@@ -118,16 +105,13 @@
     box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.6);
     border: 2px solid var(--scolor);
 }
-.signin_button p{
-    color:#000;
-}
 .signin_button:hover{
     background-color: var(--pcolor);
     border-color: var(--pcolor);
 }
 .signin_button:hover > p{
     color:#fff ;
-    text-decoration: none;
+
 }
 
 .login_button {
@@ -150,14 +134,12 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    margin: 5px 0px;
 }
 .last p a{
     font-size: 0.8rem;
     color: #fff;
     text-decoration: none;
 }
-
 .last p a:hover{
     color:var(--pcolor);
 }
@@ -193,13 +175,13 @@
     padding: 17.5px;
     display: flex;
     height: 70px;
-    width: 95%;
+    width: 90%;
     border-radius: 35px;
     background-color: var(--pcolordark);
     justify-content: center;
     align-items: center;
     max-width: 450px;
-    
+    box-sizing: border-box;
 }
 
 .searchbar{
@@ -282,7 +264,7 @@
 .categories_section{
     display: flex;
     position: relative;
-    align-content: center;
+    justify-content: center;
     align-items: center;
     width: 100%;
     height: 1200px;
@@ -293,11 +275,12 @@
 .categories_section .ct_header{
     width: 100%;
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     padding-left: 5%;
     font-weight: bold;  
     font-size: 1.4rem;
     color: #fff;
+    height: 60px;
 /*  background-color: yellow;  */
 }
 
