--- a/css/global.css
+++ b/css/global.css
@@ -134,8 +134,9 @@ body,p{
     text-decoration: none;
     color: #fff;
     padding: 0px 10px;
-    height: 40px;
+    height: 50px;
     border-bottom: 1px solid var(--pcolordark);
+    transition: padding 100ms; 
 }
 
 #links .nav_item:hover{
