--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@
 .cover_section{
     position: relative;
     height: 500px;
-/*    padding-top: 60px;*/
+    padding-top: 50px;
     display: flex;
     width: 100%;
     background-color: crimson;
