--- a/css/add_item.css
+++ b/css/add_item.css
@@ -3,16 +3,31 @@
     --pcolordark:hsla(350,70%,35%,1);
     --pcolordarker:hsla(350,70%,30%,1);
     --scolor:hsla(43,90%,50%,1);
+    --success_color:rgb(0,255,0,1);
 }
+ 
+input[type=text],.desc_box{
+    border: 1px solid var(--pcolor);
+    border-radius: 4px;
+    height: 2.4rem;
+    padding: 8px;
+    font-size: 0.9rem;
+}
+
+input[type=text]:focus,.desc_box:focus{
+    box-shadow:0px 0px 5px 0px var(--pcolor);
+    outline: 0px;
+}
+
 
 .body_section{
     position: relative;
     display: flex;
     width: 100%;
     height: 650px;
+    padding-top: 50px;
     flex-direction: column;
-    padding-top: 60px;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     background-color: #fff;
 }
@@ -22,13 +37,14 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    margin-top: 50px;
-    padding: 0px 10px;
 }
-.heading h2{
+.heading h1{
+    letter-spacing: 1px;
+    font-family: 'Staatliches', sans-serif;
     text-transform: uppercase;
     margin: 0px;
-    padding: 0px;
+    color: var(--pcolor);
+    margin: 0px;
 }
 
 .fcontainer{
@@ -40,63 +56,38 @@
     width: 90%;
     max-width: 500px;
 /*    border: 1px solid var(--pcolor);*/
-    border-radius: 10px;
+    border-radius: 20px;
     box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.4);
 }
-
+ 
 .row{
     display: flex;
     width: 100%;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    margin: 8px 0px;
+    margin-bottom: 15px;
 }
-.fcontainer .w50{
-    width: 49%;   
+
+.desc_box{
+    min-height:100px; 
+    min-width: 100%;
 }
+
 .fcontainer .w100{
     width: 100%;
 }
 
-.fcontainer .textbox{
-    border: 1px solid var(--pcolor);
-    border-radius: 4px;
-    height: 2.5em;
-    padding: 0px 8px;
-    font-size: 0.8em;
-    background-color: rgba(255,255,255,1);
-    
-}
-.fcontainer .textbox:focus{
-    box-shadow:0px 0px 5px 0px var(--pcolor);
-    outline: 0px;
-}
 
-.fcontainer .desc_box{
-    border: 1px solid var(--pcolor);
-    border-radius: 4px;
-    padding:8px;
-    font-size: 0.8em;
-    background-color: rgba(255,255,255,1);
-}
-
-.fcontainer .desc_box:focus{
-    box-shadow:0px 0px 5px 0px var(--pcolor);
-    outline: 0px;
-}
 .fcontainer .caption{
     width: 100%;
-    line-height: 1.7em;
-    font-size: 0.9em;
-    display: flex;
-    align-items: center;
+    line-height: 2rem;
 }
 
 
 
 .button{
-   display: flex;
+    display: flex;
     align-content: center;
     justify-content: center;
     width: 120px;
