--- a/css/email_page.css
+++ b/css/email_page.css
@@ -5,86 +5,50 @@
     --scolor:hsla(43,90%,50%,1);
 }
 
+input{
+    border: 1px solid var(--pcolor);
+    border-radius: 0px 4px 4px 0px;
+    height: 2.4rem;
+    padding: 8px 8px;
+    font-size: 0.9rem;
+}
+
+input:focus{
+     outline: 0px;
+}
+
 .body_section{
     position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     width: 100%;
     height: 500px;
-    padding-top: 60px;
+    padding-top: 50px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
- 
-.fcontainer{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    width: 90%;
-    max-width: 700px;
-    flex-direction: column;
-    background-color: #fff;
-    border-radius: 5px;
-/*    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.6);*/
-}
+  
 .fheader{
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
     flex-direction: column;
     width: 90%;
     max-width: 700px;
-    height: 100px;
-  
-    -webkit-box-pack: start;
-  
-    -ms-flex-pack: start;
-  
     justify-content: center;
-    
-    -webkit-box-align: center;
-    
-    -ms-flex-align: center;
     
     align-items: flex-start;
-   
 }
-.heading{
-/*    text-transform: uppercase;*/
-}
+
 .heading p{
     margin: 0px;
     padding: 0px;
 }
 
-.fcontainer .textbox{
-    border: 1px solid var(--pcolor);
-    display: flex;
-    flex: 1;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    height: 100%;
-    padding: 0px 8px;
-    font-size: 0.8rem;
-}
-
-.fcontainer .textbox:focus{
-    outline: 0px;
-}
-
-
-
 
 .row{
     display: flex;
-    width: 100%;
-    height: 2.5em;
+    width: 90%;
+    max-width: 500px;
+    height: 2.4rem;
 }
 
 
