--- a/css/index.css
+++ b/css/index.css
@@ -5,11 +5,9 @@
     --pcolordarker:hsla(350,70%,30%,1);
     --scolor:hsla(43,90%,50%,1);
     --success_color:rgb(0,255,0,1);
-    --button_font_size:0.9em;
 }
 
-
-            /*Cover section*/
+        /*Cover section*/
 .cover_section{
     position: relative;
     height: 500px;
@@ -63,6 +61,7 @@
 }
 .c_upper p{
     text-align: center;
+    font-size: 1rem;
 }
 
 .c_lower{
@@ -87,15 +86,14 @@
     font-family: 'Open Sans', sans-serif;
     width: 150px;
     height: 40px;
-    font-size: var(--button_font_size);
+    font-size: 0.9rem;
     justify-content: center;
     align-items: center;
-    margin: 0px 0px;
-    border-radius: 5px;
-    box-sizing: border-box;
+    border-radius: 20px;
     cursor: pointer;
     font-weight: 600;
 }
+
 .c_button:focus{
     outline: 0px;
 }
@@ -111,7 +109,6 @@
 }
 .signin_button:hover > p{
     color:#fff ;
-
 }
 
 .login_button {
@@ -173,15 +170,14 @@
 
 .outer{
     padding: 17.5px;
-    display: flex;
     height: 70px;
     width: 90%;
+    max-width: 450px;
     border-radius: 35px;
     background-color: var(--pcolordark);
+    display: flex;
     justify-content: center;
     align-items: center;
-    max-width: 450px;
-    box-sizing: border-box;
 }
 
 .searchbar{
@@ -194,18 +190,16 @@
 
 .searchbar .search_text{
     display: flex;
-    background-color: #fff;
     justify-content: center;
     align-items: center;
-    font-size: 0.9em;
+    background-color: #fff;
+    font-size: 0.9rem;
     font-weight: bold;
-    padding-left:15px;
+    padding: 0px 10px;
     letter-spacing: 1px;
-    padding-right:10px;
     height: 100%;
     color:var(--pcolor);
-    border-top-left-radius: 35px;
-    border-bottom-left-radius: 35px;
+    border-radius: 35px 0px 0px 35px;
     border: 0px solid #fff;
 }
 
@@ -214,23 +208,19 @@
     flex: 1;
     height: 100%;
     border: 0px solid #fff;
-    margin-right: 17px;
-    border-bottom-right-radius: 35px;
-    border-top-right-radius: 35px;
-/*
-    border-top-left-radius: 6px;
-    border-bottom-left-radius: 6px;
-*/
+    margin-right: 20px;
+    border-radius: 0px 35px 35px 0px;
     overflow: hidden;
 }
 
 .searchbox_container .searchbox{
     width:100%;
     height: 100%;
-    border: 0px solid #1EA075;
+    border: 0px ;
     padding-right:9px;
-    font-size: 0.9em;
+    font-size: 0.9rem;
 }
+
 .searchbox_container .searchbox:focus{
     outline: 0px;
 }
@@ -238,17 +228,17 @@
 .searchbar .search_icon_container{
     height: 35px;
     width: 35px;
-    border-radius: 18px;
+    border-radius: 50%;
     
     display: flex;
     justify-content: center;
     align-items: center;
     
     background-color: #fff;
-    border: 0px solid #fff;
+    border: 0px;
 }
-.search_icon_container:hover{
-    background-color:rgba(255,255,255,0.7);
+.search_icon_container:hover  .search_icon{
+   transform: rotate(45deg);
 }
 .search_icon{
     background-image: url("../icons/search.svg");
@@ -258,6 +248,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
+    transition: transform 400ms; 
 }
 
                   /*Categories*/
@@ -322,7 +313,7 @@
     height: 150px;
     justify-content: center;
     align-items: center;
-    transition: all 1s ease ;
+    transition: transform 1s ease ;
 }
 .image_container .thumb_background{
     width: 100%;
@@ -332,10 +323,9 @@
 
 .t_button{
     position: absolute;
-    font-size: var(--button_font_size);
+    font-size: 0.9rem;
     display: flex;
     bottom: 0px;
-    
     height: 40px;
     justify-content: center;
     align-items: center;
@@ -361,7 +351,7 @@
 .thumbs:hover .t_button{
     height: 100%;
     background-color: rgba(0,0,0,0.4);
-    font-size: 1.3em;
+    font-size: 1.3rem;
 }
 
 .thumbs:hover .t_button .inner_span{
@@ -374,10 +364,6 @@
     transform: translateY(40px) scale(1.6);
 }
 
-
-.thumbs:hover .overlay{
-/*    background-color: rgba(0,0,0,0.3);*/
-}
 
 /*Resposive*/
 
